# the-daily-rug

./: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.planning/: ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
anchor/: .gitignore  Anchor.toml  package-lock.json  package.json
anchor/programs/burn-for-article/: Cargo.toml
anchor/programs/burn-for-article/src/: errors.rs  lib.rs
anchor/programs/burn-for-article/src/instructions/: burn_for_article.rs  initialize_config.rs  mod.rs
anchor/programs/burn-for-article/src/state/: article_burn_record.rs  burn_config.rs  mod.rs
anchor/scripts/: init-config.ts
anchor/tests/: burn_for_article.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/admin/: page.tsx
components/admin/: AIDraftPanel.tsx  ArticleEditor.tsx  ArticleTable.tsx  CoverImageUpload.tsx  RichTextEditor.tsx
components/layout/: SiteHeader.tsx  WalletArea.tsx
components/providers/: SolanaProvider.tsx
components/public/: AlphaGateCountdown.tsx  ArticleCard.tsx  ArticleGate.tsx  ArticleHeroCard.tsx  ArticleLiveWrapper.tsx  BondingCurveBanner.tsx  BurnButton.tsx  DisclaimerModal.tsx  SiteFooter.tsx  SkeletonCard.tsx  StatusBadge.tsx  TombstoneGraphic.tsx
components/wallet/: useTokenBalance.ts
idl/: burn_for_article.json
lib/articles/: gate.ts
lib/bonding-curve/: fetchProgress.ts
lib/burn/: utils.ts
lib/supabase/: articles.ts  (+2 more)
scripts/: seed-articles.mjs  upload-covers.mjs
supabase/: config.toml  seed.sql
(+45 files in other folders)
