[package]
name = "burn-for-article"
version = "0.1.0"
description = "Burn SPL tokens to permanently redact an article on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burn_for_article"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
